kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commerce-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e-commerce-postgres
  template:
    metadata:
      labels:
        app: e-commerce-postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: e-commerce-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: e-commerce-postgres
